--- a/patmat/pom.xml
+++ b/patmat/pom.xml
@@ -2,14 +2,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>zyh</groupId>
+  <groupId>zyhzju</groupId>
   <artifactId>patmat</artifactId>
   <version>1.0</version>
   <packaging>jar</packaging>
   <name>patmat</name>
 
     <properties>
-        <spark.version>2.1.0</spark.version>
         <scala.version>2.11.8</scala.version>
     </properties>
 
